test/negative/metal_no_hxrt_dynamic_boundary/Main.hx
class Main {
	static function main() {
		var payload:haxe.DynamicAccess<Int> = {};
		payload.set("x", 1);
	}
}
